# homekit-bridge

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.de.md  README.md  README_mqtt.de.md  README_mqtt.md  homekit-bridge.yaml  homekit.yaml  makefile  pyproject.toml
.claude/agent-memory/project-manager/: MEMORY.md  project-homekit-overview.md
.claude/agents/: developer.md  frondend-designer.md  project-manager.md  reviewer.md
docs/superpowers/plans/: 2026-06-07-homekit-bridge.md  2026-06-08-datapoint-routing.md  2026-06-08-live-accessory-reconcile.md  2026-06-10-qr-pairing-and-logs.md  2026-06-10-thermostat-modes.md
docs/superpowers/specs/: 2026-06-07-homekit-bridge-design.md  2026-06-08-datapoint-routing-design.md  2026-06-08-live-accessory-reconcile-design.md  2026-06-10-qr-pairing-and-logs-design.md  2026-06-10-thermostat-modes-design.md
src/homekit_bridge/: __main__.py  backup.py  config.py  logbuffer.py  models.py  mqttsource.py  settings.py
src/homekit_bridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/homekit_bridge/ccu3/: adapter.py  callback.py  client.py
src/homekit_bridge/hap/: accessories.py  bridge.py
tests/: test_backup.py  test_config.py  test_events.py  test_logbuffer.py  test_main_wiring.py  test_models.py  test_mqttsource.py  test_settings.py
tests/ccu3/: test_adapter.py  test_callback.py  test_client.py
tests/hap/: test_accessories.py  test_bridge.py
tests/mapper/: test_datapoints.py  test_device_mapper.py
tests/solaredge/: test_adapter.py
tests/web/: test_api.py  test_pairing_and_logs.py
(+7 files in other folders)
