[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "homekit-bridge"
version = "0.1.0"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Oliver Merz", email = "olli@oliver-merz.de" }]
dependencies = [
    "HAP-python[QRCode]>=4.9",
    "paho-mqtt>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "qrcode>=7.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

# Ship the Vanilla-JS frontend (non-Python data files) inside the wheel so the
# StaticFiles mount works when the package is pip-installed (e.g. in Docker).
[tool.setuptools.package-data]
homekit_bridge = ["web/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
